# vss

./: .gitignore  README.md  pyproject.toml
assignment1/: Makefile  bovw.py  data_sources.py  descriptor.py  descriptors.py  extractor.py  extractors.py  feature_detectors.py  ground_truth.py  l3_visual_search.ipynb  labels.json  metrics.py  resnet.py  retriever.py  retrievers.py  session_state_manager.py  session_state_managers.py  sift_visualizer.py  train_resnet.py  visual_search.py
assignment1/tests/: test_bovw.py  test_descriptor.py  test_descriptors.py  test_extractor.py  test_extractors.py  test_feature_detectors.py  test_image_labeler.py  test_metrics.py  test_retriever.py  test_retrievers.py
