[tool.poetry]
name = "cvpr"
version = "0.1.0"
description = "assignments for cvpr"
authors = ["frankcholula <lu.phrank@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
numpy = "^2.1.2"
streamlit = "^1.39.0"
opencv-python-headless = "^4.10.0.84"
firebase-admin = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
